# gba-sprite-engine

./: CMakeLists.txt  README.md  timespent.csv  timespent_Lukas.csv  timespent_othmane.csv
Better_game/: CMakeLists.txt
Better_game/src/: BetterScene.cpp  BetterScene.h  main.cpp  mooi.h
engine/: CMakeLists.txt
engine/include/libgba-sprite-engine/sprites/: sprite_builder.h
race/: CMakeLists.txt  Class_Diagram.graphml
race/img/: New Piskel-20181203-101839.piskel  blue_car.c  blue_car.h  green_car.c  green_car.h  puple_car.c  puple_car.h  red_car.c  red_car.h  turquoise_car.c  turquoise_car.h
race/src/: ChooseCarScene.cpp  ChooseCarScene.h  Game.h  RaceScene.cpp  RaceScene.h  StartScene.cpp  StartScene.h  arrow.h  blueCar.h  chooseCarScene.cpp  chooseCarScene.h  game.h  greenCar.h  main.cpp  mustardCar.h  purpleCar.h  raceScene.cpp  raceScene.h  red_car.h  soundFx_hit.h  soundFx_hit_data.h  soundFx_menuNav.h  soundFx_menuNavigation_data.h  sprite_data.h  startScene.cpp  startScene.h  timer.cpp  timer.h  track1.h  turquoiseCar.h
